ecmascript/parser/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration5_es6/input.ts.stderr
error: Unexpected token `}`. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration5_es6/input.ts:4:1
  |
4 | }
  | ^

